app/assets/stylesheets/custom.css
.modal .info-section .info-left-section strong{
    display: inline-block;
}
#side-nav .profile-info .profile-details .menudd:after{
    left: 116px;
}

.hidden{
    display: none;
}
#activity-sidebar .mCustomScrollBox{
    padding-right: 10px;
}
.large_modal{
    width: 86%;
}

.editPaymentModal h6 .inline-select{
    width: 100%;
}

input#expense_amount{
    border: none;
}

